@@ -1,6 +1,7 @@
 # $Id$
 
 # CPS --------------------
+CPSUtil >= 0.2.0
 CPSInstaller
 CPSCore >= 3.21
 CPSDocument
