@@ -1,9 +1,0 @@
-##parameters=product=None
-# $Id$
-"""
-Verify wether an optional CPSProduct is present or not
-"""
-
-from Products.CPSDefault.utils import isProductPresent
-
-return isProductPresent(product)
