@@ -11,6 +11,7 @@ Requires:
   destructiveButtonBackgroundHover
   destructiveButtonBorderHover
   cf CPSDefault/skins/cps_styles/nuxeo/stylesheet_properties.props
+- Now using CPSUtil.integration.isProductPresent method.
 New features:
 ~~~~~~~~~~~~~
 - Added support for user password resetting.
